[project]
name = "infobip-mcp-langgraph-sdk-demo"
version = "0.1.0"
description = "A demo project using Infobip MCP with LangGraph SDK."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-mcp-adapters>=0.2.2",
    "langchain-aws>=1.4.2",
    "langgraph>=1.1.4",
    "python-dotenv>=1.2.2",
]
